--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -8,42 +8,38 @@ spec:
   selector:
     matchLabels:
       app: klovercloud-api-service
-    strategy:
-      type: RollingUpdate
-      rollingUpdate:
-        maxSurge: 2
-        maxUnavailable: 0
-    minReadySeconds: 10
-    template:
-      metadata:
-        labels:
-          app: klovercloud-api-service
-      spec:
-        containers:
-          - name: app
-            imagePullPolicy: Always
-            image: quay.io/klovercloud/ci-api-service:v1.0.0
-            resources:
-              limits:
-                cpu: 100m
-                memory: 256Mi
-              requests:
-                cpu: 66m
-                memory: 256Mi
-              envFrom:
-                - configMapRef:
-                    name: klovercloud-api-service-envar-config
-            ports:
-              - containerPort: 8080
-            readinessProbe:
-              httpGet:
-                path: /health
-                port: 8080
-              initialDelaySeconds: 10
-              periodSeconds: 10
-            livelinessProbe:
-              httpGet:
-                path: /health
-                port: 8080
-              initialDelaySeconds: 10
-              periodSeconds: 10
+  template:
+    metadata:
+      labels:
+        app: klovercloud-api-service
+    spec:
+      terminationGracePeriodSeconds: 60
+      containers:
+        - name: app
+          imagePullPolicy: Always
+          image: quay.io/klovercloud/ci-api-service:v1.0.0
+          resources:
+            limits:
+              cpu: 100m
+              memory: 256Mi
+            requests:
+              cpu: 66m
+              memory: 256Mi
+          envFrom:
+            - configMapRef:
+                name: klovercloud-api-service-envar-config
+          ports:
+            - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 3
